# appmenu-ng-gtk-module

./: .clang-format  README.md  meson.build
gtk-3.0/: meson.build
src/: appmenu-ng-gtk-module.c
